# sauklaue

./: .clang-format  .gitignore  .kateproject  CMakeLists.txt  LICENSE  README  README.md  TODO  sauklaue.kdev4
.github/workflows/: cmake.yml
.kdev4/: sauklaue.kdev4
desktop/: sauklaue.desktop  sauklaue.xml
src/: actions.cpp  actions.h  all-types.h  cairo-helpers.h  commands.cpp  commands.h  concatenate.cpp  config.kcfg  config.kcfgc  document.cpp  document.h  file.proto  file1.proto  file3.proto  file4.capnp  main.cpp  mainwindow.cpp  mainwindow.h  pagewidget.cpp  pagewidget.h  renderer.cpp  renderer.h  sauklaue.cpp  sauklaue.h  sauklaue.ui  serializer.cpp  serializer.h  settings-dialog.cpp  settings-dialog.h  settings.cpp  settings.h  tablet.cpp  tablet.h  tool-state.cpp  tool-state.h  util.h
